--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@playwright/test": "^1.58.2",
     "@types/node": "^20.11.0",
     "typescript": "^5.3.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "wrangler": "^3.0.0"
   }
 }
