--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,10 @@
 packages:
   - "."
+
+# Node.js version requirement
+# Based on package.json engines.node field (>=20.11.0)
+# or use "22" for the latest LTS
+
+# To install specific Node version for this project:
+# corepack enable
+# corepack prepare pnpm@latest --activate
