--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@playwright/test": "^1.58.2",
     "@types/node": "^20.11.0",
+    "esbuild": "^0.21.5",
     "typescript": "^5.3.0",
     "vite": "^5.0.0",
     "wrangler": "^3.0.0"
